[build-system]
requires = ["setuptools", "wheel", "Cython>=0.29.33"]
build-backend = "setuptools.build_meta"

[project]
name = "dbhose_utils"
version = "0.0.2.0"
description = "DBHose dumps convertors utility."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "0xMihalich", email = "bayanmobile87@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "light-compressor==0.0.2.1",
    "nativelib==0.2.2.4",
    "pgcopylib==0.2.2.8",
    "pgpack==0.3.1.7",
]

[project.urls]
Homepage = "https://github.com/0xMihalich/dbhose_utils"
Documentation = "https://github.com/0xMihalich/dbhose_utils#readme"
Repository = "https://github.com/0xMihalich/dbhose_utils"
Changelog = "https://github.com/0xMihalich/dbhose_utils/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["**/*.pyx", "**/*.pyi", "**/*.pxd", "*.pxd", "*.pyd", "*.md", "*.txt"]
